Added openmc conversion to the cross section converter

--- a/pre-processors/XS_Converter/src/makefile
+++ b/pre-processors/XS_Converter/src/makefile
@@ -42,10 +42,6 @@ FILTER := \
 OBJ_FILTER := $(FILTER:.f95=.o)
 MOD_FILTER := $(FILTER:.f95=.mod)
 
-#h5 datafiles inclusion
-LIB=usr/lib/x86_64-linux-gnu/hdf5/serial
-INC=usr/include/hdf5/serial
-
 #-----------------------------------------------------------------------------------
 #Add simple compile contrib files
 #-----------------------------------------------------------------------------------
@@ -87,32 +83,32 @@ reset: clean
 #Generics for source files
 #-----------------------------------------------------------------------------------
 $(filter-out $(OBJ_FILTER), $(OBJ)): %.o:	%.f95
-	$(FC) -c $(OPT) $< -I/$(INC) -L/$(LIB) -lhdf5_fortran -lhdf5
+	$(FC) -c $(OPT) $<
 
 $(filter-out $(MOD_FILTER), $(MOD)):	%.mod:	%.f95
-	$(FC) -c $(OPT) $< -I/$(INC) -L/$(LIB) -lhdf5_fortran -lhdf5
+	$(FC) -c $(OPT) $<
 
 $(EXE): $(OBJ) $(CONT_OBJ) $(LIB_OBJ)
-	$(FC) -o $@$(TYPE)$(EXT) $(OPT) $(OBJ) $(CONT_OBJ) $(LIB_OBJ) -I/$(INC) -L/$(LIB) -lhdf5_fortran -lhdf5
+	$(FC) -o $@$(TYPE)$(EXT) $(OPT) $(OBJ) $(CONT_OBJ) $(LIB_OBJ)
 	mv ./$(EXE)$(TYPE)$(EXT) ../
 
 #-----------------------------------------------------------------------------------
 #Generics for contrib files
 #-----------------------------------------------------------------------------------
 $(CONT_OBJ): %.o: $(filter %.f95, $(CONT_SRC))
-	$(FC) -c $(OPT) $^ -I/$(INC) -L/$(LIB) -lhdf5_fortran -lhdf5
+	$(FC) -c $(OPT) $^
 
 $(CONT_MOD):	%.mod:	$(filter %.f95, $(CONT_SRC))
-	$(FC) -c $(OPT) $^ -I/$(INC) -L/$(LIB) -lhdf5_fortran -lhdf5
+	$(FC) -c $(OPT) $^
 
 #-----------------------------------------------------------------------------------
 #Generics for lib files
 #-----------------------------------------------------------------------------------
 $(LIB_OBJ):	%.o: $(filter %.f95, $(LIB_SRC))
-	$(FC) -c $(OPT) $^ -I/$(INC) -L/$(LIB) -lhdf5_fortran -lhdf5
+	$(FC) -c $(OPT) $^
 
 $(LIB_MOD): %.mod:	$(filter %.f95, $(LIB_SRC))
-	$(FC) -c $(OPT) $^ -I/$(INC) -L/$(LIB) -lhdf5_fortran -lhdf5
+	$(FC) -c $(OPT) $^
 
 
 #-----------------------------------------------------------------------------------
