Switched to f90 and added OpenMC input for XS converter

--- a/pre-processors/XS_Converter/src/makefile
+++ b/pre-processors/XS_Converter/src/makefile
@@ -28,27 +28,31 @@ CONTRIB := ../../../contrib
 #rule declaration. Add these items to FILTER
 #-----------------------------------------------------------------------------------
 SRC := \
-				main.f95 \
-				globals.f95 \
-        precision.f95 \
-				outfuncs.f95 \
-				infuncs.f95
+				main.f90 \
+				globals.f90 \
+        precision.f90 \
+				outfuncs.f90 \
+				infuncs.f90
 
-OBJ := $(SRC:.f95=.o)
+OBJ := $(SRC:.f90=.o)
 MOD := $(OBJ:.o=.mod)
 
 FILTER := \
 
-OBJ_FILTER := $(FILTER:.f95=.o)
-MOD_FILTER := $(FILTER:.f95=.mod)
+OBJ_FILTER := $(FILTER:.f90=.o)
+MOD_FILTER := $(FILTER:.f90=.mod)
+
+#h5 datafiles inclusion
+LIB=usr/lib/x86_64-linux-gnu/hdf5/serial
+INC=usr/include/hdf5/serial
 
 #-----------------------------------------------------------------------------------
 #Add simple compile contrib files
 #-----------------------------------------------------------------------------------
 CONT_SRC := \
-            $(CONTRIB)/stringmod/stringmod.f95
+            $(CONTRIB)/stringmod/stringmod.f90
 
-CONT_OBJ := $(patsubst %.f95,%.o,$(notdir $(CONT_SRC)))
+CONT_OBJ := $(patsubst %.f90,%.o,$(notdir $(CONT_SRC)))
 
 CONT_MOD := $(CONT_OBJ:.o=.mod)
 
@@ -82,33 +86,33 @@ reset: clean
 #-----------------------------------------------------------------------------------
 #Generics for source files
 #-----------------------------------------------------------------------------------
-$(filter-out $(OBJ_FILTER), $(OBJ)): %.o:	%.f95
-	$(FC) -c $(OPT) $<
+$(filter-out $(OBJ_FILTER), $(OBJ)): %.o:	%.f90
+	$(FC) -c $(OPT) $< -I/$(INC) -L/$(LIB) -lhdf5_fortran -lhdf5
 
-$(filter-out $(MOD_FILTER), $(MOD)):	%.mod:	%.f95
-	$(FC) -c $(OPT) $<
+$(filter-out $(MOD_FILTER), $(MOD)):	%.mod:	%.f90
+	$(FC) -c $(OPT) $< -I/$(INC) -L/$(LIB) -lhdf5_fortran -lhdf5
 
 $(EXE): $(OBJ) $(CONT_OBJ) $(LIB_OBJ)
-	$(FC) -o $@$(TYPE)$(EXT) $(OPT) $(OBJ) $(CONT_OBJ) $(LIB_OBJ)
+	$(FC) -o $@$(TYPE)$(EXT) $(OPT) $(OBJ) $(CONT_OBJ) $(LIB_OBJ) -I/$(INC) -L/$(LIB) -lhdf5_fortran -lhdf5
 	mv ./$(EXE)$(TYPE)$(EXT) ../
 
 #-----------------------------------------------------------------------------------
 #Generics for contrib files
 #-----------------------------------------------------------------------------------
-$(CONT_OBJ): %.o: $(filter %.f95, $(CONT_SRC))
-	$(FC) -c $(OPT) $^
+$(CONT_OBJ): %.o: $(filter %.f90, $(CONT_SRC))
+	$(FC) -c $(OPT) $^ -I/$(INC) -L/$(LIB) -lhdf5_fortran -lhdf5
 
-$(CONT_MOD):	%.mod:	$(filter %.f95, $(CONT_SRC))
-	$(FC) -c $(OPT) $^
+$(CONT_MOD):	%.mod:	$(filter %.f90, $(CONT_SRC))
+	$(FC) -c $(OPT) $^ -I/$(INC) -L/$(LIB) -lhdf5_fortran -lhdf5
 
 #-----------------------------------------------------------------------------------
 #Generics for lib files
 #-----------------------------------------------------------------------------------
-$(LIB_OBJ):	%.o: $(filter %.f95, $(LIB_SRC))
-	$(FC) -c $(OPT) $^
+$(LIB_OBJ):	%.o: $(filter %.f90, $(LIB_SRC))
+	$(FC) -c $(OPT) $^ -I/$(INC) -L/$(LIB) -lhdf5_fortran -lhdf5
 
-$(LIB_MOD): %.mod:	$(filter %.f95, $(LIB_SRC))
-	$(FC) -c $(OPT) $^
+$(LIB_MOD): %.mod:	$(filter %.f90, $(LIB_SRC))
+	$(FC) -c $(OPT) $^ -I/$(INC) -L/$(LIB) -lhdf5_fortran -lhdf5
 
 
 #-----------------------------------------------------------------------------------
@@ -117,10 +121,10 @@ $(LIB_MOD): %.mod:	$(filter %.f95, $(LIB_SRC))
 
 #-----------------------------------------------------------------------------------
 #Dependency List
-#Use [gfortran -M -cpp *.f95] repeatedly until clean compile to update rules below
+#Use [gfortran -M -cpp *.f90] repeatedly until clean compile to update rules below
 #-----------------------------------------------------------------------------------
-globals.o globals.mod: globals.f95 precision.mod
-infuncs.o infuncs.mod: infuncs.f95 globals.mod stringmod.mod
-main.o: main.f95 globals.mod infuncs.mod outfuncs.mod
-outfuncs.o outfuncs.mod: outfuncs.f95 globals.mod
-precision.o precision.mod: precision.f95
+globals.o globals.mod: globals.f90 precision.mod
+infuncs.o infuncs.mod: infuncs.f90 globals.mod stringmod.mod
+main.o: main.f90 globals.mod infuncs.mod outfuncs.mod
+outfuncs.o outfuncs.mod: outfuncs.f90 globals.mod
+precision.o precision.mod: precision.f90
