Changed SPARSKIT to compile with new AND old compilers

--- a/contrib/SPARSKIT2/makefile
+++ b/contrib/SPARSKIT2/makefile
@@ -20,7 +20,7 @@
 # Last Updated:  May 9, 1994.
 
 SHELL = /bin/sh
-F77 = gfortran -Wno-argument-mismatch
+F77 = gfortran -std=legacy
 # F77 = f77
 # AR = ar rcv
 AR = ar -rcv
