Nonu now works and some regression tests have been updated to use it

--- a/THOR/src/Makefile
+++ b/THOR/src/Makefile
@@ -10,7 +10,7 @@ debug:    TYPE := _Debug
 catch:    TYPE := _Catch
 coverage: TYPE := _Coverage
 
-all:      OPT := -O3
+all:      OPT := -O3 -Wall -W -Wsurprising
 debug:    OPT := -O0 -g -fbacktrace -ffpe-trap=zero,overflow,underflow -fcheck=all
 catch:    OPT := -O0 -g -Wall -W -Wsurprising -Werror
 coverage: OPT := -O0 -g --coverage
