--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,10 @@ THOR/examples/regression_tests/**/*.convergence
 THOR/examples/regression_tests/**/*.out
 THOR/examples/regression_tests/**/*.outeven
 THOR/examples/regression_tests/**/*.outodd
+
+#tutorial files
+THOR/examples/*_tutorial/**/*.thrm
+THOR/examples/*_tutorial/**/*.msh
+THOR/examples/*_tutorial/**/*.vtk
+THOR/examples/*_tutorial/**/*.log
+THOR/examples/*_tutorial/**/*out.csv
